<resources>
    <string name="app_name">My Application</string>
    <string name="email">E-posta</string>
    <string name="password">Şifre</string>
    <string name="ask_account">Hesabın yok mu?</string>
    <string name="register">Kaydol</string>
    <string name="login">Giriş Yap</string>
    <string name="emptyLogin">E-posta ve şifre alanları boş olamaz</string>
    <string name="emailnotvalid">Lütfen std.yildiz.edu.tr uzantılı okul e-postanızı girin</string>
    <string name="ara">Mezun ara</string>
    <string name="ayarlar">Ayarlar</string>
    <string name="profil">Profil</string>
    <string name="duyurular">Duyurular</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Ad</string>
    <string name="surname">Soyad</string>
    <string name="entry_year">Giriş Yılı</string>
    <string name="graduate_year">Mezuniyet Yılı</string>
    <string name="confirm_password">Şifreyi Onaylayın</string>
    <string name="required">Zorunlu*</string>
    <string name="next">İleri</string>
    <string name="password_problem">Girdiğiniz şifreler uyuşmuyor</string>
    <string name="year_error">Lütfen giriş ve mezuniyet yılınızı kontrol edin</string>
    <string name="signOut">Çıkış Yap</string>
    <string name="updatePicture">Fotoğrafı Güncelle</string>
    <string name="updateProfile">Profil Bilgilerini Güncelle</string>
    <string name="updateEducation">Eğitim Bilgilerini Güncelle</string>
    <string name="updateContact">İletişim Bilgilerini Güncelle</string>
    <string name="updateJob">Kariyer Bilgilerini Güncelle</string>
    <string name="anasayfa">Anasayfa\n</string>
    <string name="search">Mezun Ara</string>
    <string name="iletisim">İletişim</string>
    <string name="profilBilgileri">Profil Bilgileri</string>
    <string name="successfulRegistration">Kayıt işlemi başarılı!</string>
    <string name="title">Başlık</string>
    <string name="date">Tarih</string>
    <string name="announcementDay">Duyuru tarihi</string>
    <string name="addAnnouncement">Duyuru Ekle</string>
    <string name="announcementDetail">Duyuru Detayı</string>
    <string name="share">Paylaş</string>
    <string name="save">Kaydet</string>
    <string name="successfulAnnouncement">Duyuru başarılı bir şekilde paylaşıldı!</string>
    <string name="title_activity_duyuru_detay">DuyuruDetayActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="addPost">Paylaşım Ekle</string>
    <string name="successfulPost">Paylaşım işlemi başarılı</string>
    <string name="egitim">Eğitim Bilgileri</string>
    <string name="is">İş Bilgileri</string>
    <string name="sosyal_medya">Sosyal Medya Bilgileri</string>
    <string name="donem">Dönem</string>
    <string name="derece">Derece</string>
    <string name="country">Ülke</string>
    <string name="city">Şehir</string>
    <string name="title_activity_profil_guncelle">ProfilGuncelleActivity</string>
    <string name="bolum">Bölüm</string>
    <string name="numara">Telefon Numarası</string>
    <string name="cikis">Çıkış Yap</string>
</resources>