<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ProfilActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/profilGuncelle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/updateProfile"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profilFotografiCardView" />

        <androidx.cardview.widget.CardView
            android:id="@+id/profilFotografiCardView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="30dp"
            android:layout_marginTop="50dp"
            app:cardCornerRadius="300dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/profilFotografi"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/profile_background"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_person" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/profilBilgiCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:minHeight="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profilGuncelle">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/profilBilgileri"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/profilBilgiImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|end"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:src="@drawable/ok">

            </ImageView>

            <LinearLayout
                android:id="@+id/profilBilgiLinear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/profilIsim"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:text="@string/name"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/profilSoyIsim"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:text="@string/surname"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/profilUlke"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:text="@string/country"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/profilSehir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:text="@string/city"
                    android:textStyle="bold" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/profilIletisimCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:minHeight="50dp"
            app:layout_constraintTop_toBottomOf="@id/profilBilgiCardView">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/iletisim"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/profilIletisimImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|end"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:src="@drawable/ok">

            </ImageView>

            <LinearLayout
                android:id="@+id/profilIletisimLinear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/profilNumara"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:text="@string/email"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/profilMail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:text="@string/derece"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/profilEgitimCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="20dp"
            android:gravity="center"
            android:minHeight="50dp"
            app:layout_constraintTop_toBottomOf="@id/profilIletisimCardView">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/egitim"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/profilEgitimImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|end"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:src="@drawable/ok">

            </ImageView>

            <LinearLayout
                android:id="@+id/profilEgitimLinear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/profilYil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:text="@string/donem"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/profilDerece"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:text="@string/derece"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/profilIsCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:minHeight="50dp"
            app:layout_constraintTop_toBottomOf="@id/profilEgitimCardView">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/is"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/profilIsImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|end"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:src="@drawable/ok">

            </ImageView>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/profilSosyalMedyaCardVıew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:minHeight="50dp"
            app:layout_constraintTop_toBottomOf="@id/profilIsCardView">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/sosyal_medya"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/profilMedyaImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|end"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:src="@drawable/ok">

            </ImageView>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>